tests/snapshots/run_wpt_conformance__onnx_ceil_float32_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "ceil.https.any.js",
    "ceil float32 5D tensor",
    "onnx",
    "PASS",
)
