tests/snapshots/run_wpt_conformance__onnx_clamp_float16_1D_tensor_default_options_minValue_and_specified_options_maxValue_0_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 1D tensor default options.minValue and specified options.maxValue=0.0",
    "onnx",
    "PASS",
)
