tests/snapshots/run_wpt_conformance__onnx_clamp_float16_1D_tensor_specified_both_positive_options_minValue_and_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 1D tensor specified both positive options.minValue and options.maxValue",
    "onnx",
    "PASS",
)
